--- a/src/components/CalendarBody/CalendarBody.module.scss
+++ b/src/components/CalendarBody/CalendarBody.module.scss
@@ -9,8 +9,12 @@
         display: grid;
         grid-gap: 0.25em;
         grid-template-columns: repeat(7, 1fr);
+        background-color: #27ae60;
         .dayTitle {
-            background-color: #fff;
+            padding: 0.25em 0.5em;
+            background-color: #27ae60;
+            color: #fff;
+            font-weight: bold;
             text-align: center;
         }
     }
@@ -26,9 +30,23 @@
     
             .calendarItem {
                 background-color: #fff;
+                cursor: pointer;
+                &:first-child, &:last-child {
+                    background: #ecf0f1 !important;
+                }
                 &.inactive {
-                    color: gray;
-                    background-color: lightgray;
+                    color: #7f8c8d;
+                }
+                &:not(.inactive) {
+                    .dayNumber {
+                        &.today {
+                            background: #c0392b;
+                            color: #fff;
+                        }
+                    }
+                }
+                .dayNumber {
+                    padding: 5px;
                 }
             }
         }
