--- a/src/components/CalendarBody/CalendarBody.module.scss
+++ b/src/components/CalendarBody/CalendarBody.module.scss
@@ -40,7 +40,7 @@
                 &:not(.inactive) {
                     .dayNumber {
                         &.today {
-                            background: #c0392b;
+                            background: #2980b9;
                             color: #fff;
                         }
                     }
