--- a/src/components/ReminderForm/ReminderForm.module.scss
+++ b/src/components/ReminderForm/ReminderForm.module.scss
@@ -23,6 +23,11 @@
             .field {
                 border: 1px solid #000;
                 background-color: #ecf0f1;
+
+                &.fieldError {
+                    border: 3px solid #c0392b;
+                    background-color: #e74c3c;
+                }
             }
 
             .colorsContainer {
@@ -34,7 +39,7 @@
                     height: 2em;
                     width: 2em;
                     border-radius: 50%;
-                    border: 3px solid #fff;
+                    margin: 0 .5em;
                     transform: scale(1);
                     transition: transform 0.3s;
                     &:hover {
@@ -42,7 +47,7 @@
                     }
                     &.active {
                         transform: scale(1.1);
-                        border-color: #000;
+                        border: 3px solid #000;
                     }
                 }
             }
