--- a/src/components/DayRemindersModal/DayRemindersModal.module.scss
+++ b/src/components/DayRemindersModal/DayRemindersModal.module.scss
@@ -2,6 +2,20 @@
     display: flex;
     flex-direction: column;
 
+    .dayRemindersModalTitle {
+        display: flex;
+        > * {
+            margin: 1em;
+            &.deleteAll {
+                border: 2px solid #c0392b;
+                background-color: #e74c3c;
+                color: #fff;
+                font-weight: bold;
+                cursor: pointer;
+            }
+        }
+    }
+
     .addButton {
         align-self: flex-end;
         border: none;
